--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  # sdk: ^3.8.1
-  sdk: ">=3.1.3 <4.0.0"
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -59,7 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/mot.png
+    - assets/images/quiz-logo.png
     - assets/data/vocabulary.json
   #   - images/a_dot_ham.jpeg
 
